添加了后台的几个页面和相关的路由和表单

--- a/Project/templates/apost.html
+++ b/Project/templates/apost.html
@@ -5,7 +5,7 @@
 {% block head %}
     <style>
         body {
-            background-image: url('{{ static('img/S9_1.jpg') }}');
+            background-image: url('{{ static('img/background2.jpg') }}');
             background-position: center 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -13,6 +13,7 @@
             -webkit-background-size: cover;
             -o-background-size: cover;
             -moz-background-size: cover;
+            -ms-background-size: cover;
         }
         #workShop {
             margin-top: 150px;
