--- a/Project/templates/teams.html
+++ b/Project/templates/teams.html
@@ -5,7 +5,19 @@ S9世界赛参赛战队
 {% endblock %}
 
 {% block head %}
-
+    <style>
+        body {
+            background-image: url('{{ static('img/background2.jpg') }}');
+            background-position: center 0;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+            -webkit-background-size: cover;
+            -o-background-size: cover;
+            -moz-background-size: cover;
+            -ms-background-size: cover;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
