--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -49,7 +49,7 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">赛事资料 <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">赛程</a></li>
+                        <li><a href="{{ url_for('front.game') }}">赛程</a></li>
                         <li><a href="#">比赛数据</a></li>
                         <li role="separator" class="divider"></li>
                         <li class="dropdown-header">参赛战队</li>
