--- a/Project/templates/cms_team.html
+++ b/Project/templates/cms_team.html
@@ -1,13 +1,112 @@
 {% extends 'selfcenterbase.html' %}
 {% block selfcenterbody %}
+    {# 如果是管理员，则多一个所有帖子的管理 #}
+        <!--{% for post in all_posts %}-->
+        <!--{% endfor %}-->
+    <div class="col-md-12" >
+        <div class="panel panel-default">
+            <div class="panel-heading nav navbar-static-top">
+                <div class="row" style="margin-right: 0px">
+                    <!--title-->
+                    <div class="col-md-1 hidden-xs myCenter">
+                        队徽
+                    </div>
+                    <!--comment_num-->
+                    <div class="col-md-1 hidden-xs myCenter">
+                        队名
+                    </div>
+                    <div class="col-md-1 hidden-xs myCenter">
+                        赛区
+                    </div>
+                    <div class="col-md-1 hidden-xs myCenter">
+                        rank
+                    </div>
+                    <div class="col-md-8 ">
+                        <div class="col-md-2 hidden-xs myCenter">
+                            <span>上单</span>
+                        </div>
+                        <div class="col-md-2 hidden-xs myCenter">
+                            <span>打野</span>
+                        </div>
+                        <div class="col-md-2 hidden-xs myCenter">
+                            <span>中单</span>
+                        </div>
+                        <div class="col-md-2 hidden-xs myCenter">
+                            <span>射手</span>
+                        </div>
+                        <div class="col-md-2 hidden-xs myCenter">
+                            <span>辅助</span>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+            <div class="panel-body pre-scrollable table-hover" style="border-bottom:1px solid #eee; height: 900px; margin-top: 0px">
+            {% for team in teams %}
+                <div class="row" style="border-bottom: 1px solid #eee">
+                    <!--队徽-->
+                    <div class="col-md-1 hidden-xs myCenter myTermBlock">
+                        <img src="{{static(team.logo_addr)}}" class="img-circle" style="width: 50px; height: 50px; margin: 0 auto">
+                    </div>
+                    <!--队名-->
+                    <div class="col-md-1 hidden-xs myCenter myTermBlock">
+                        <span>{{ team.team_name }}</span>
+                    </div>
+                    <!--赛区-->
+                    <div class="col-md-1 hidden-xs myCenter myTermBlock">
+                        <span>{{ team.team_area }}</span>
+                    </div>
+                    <!--s9_rank-->
+                    <div class="col-md-1 hidden-xs myCenter myTermBlock">
+                        <span>{{ team.s9_rank }}</span>
+                    </div>
+                    <div class="col-md-8 hidden-xs">
+                        <!--上单-->
+                        <div class="col-md-2 hidden-xs myCenter myTermBlock">
+                            <span>{{ team.players[0].game_name }}</span>
+                        </div>
+                        <!--打野-->
+                        <div class="col-md-2 hidden-xs myCenter myTermBlock">
+                            <span>{{ team.players[1].game_name }}</span>
+                        </div>
+                        <!--中单-->
+                        <div class="col-md-2 hidden-xs myCenter myTermBlock">
+                            <span>{{ team.players[2].game_name }}</span>
+                        </div>
+                        <!--射手-->
+                        <div class="col-md-2 hidden-xs myCenter myTermBlock">
+                            <span>{{ team.players[3].game_name }}</span>
+                        </div>
+                        <!--辅助-->
+                        <div class="col-md-2 hidden-xs myCenter myTermBlock">
+                            <span>{{ team.players[4].game_name }}</span>
+                        </div>
 
-    {# 所有team的信息 做一个固定大小面板 #}
-    {% for team in teams %}
+                        <div class="col-md-2 hidden-xs myCenter myTermBlock">
+                            <button class="btn btn-info ">删除</button>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+            </div> <!--pannel body-->
+        </div> <!--pannel-->
+                <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                  </div>
+                  <div class="modal-body">
 
-    {# 设置一个delete按钮 #}
-    {% endfor %}
-
-    {# 添加队伍的信息 #}
-    {# 是一个form #}
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+    </div> <!--col-md-12 讨论区帖子表格-->
 {% endblock %}
