--- a/Project/templates/discussion.html
+++ b/Project/templates/discussion.html
@@ -15,11 +15,6 @@
             margin-bottom: 50px;
         }
 
-        /* 图片格子 */
-        /*{##carousel-example-generic .carousel-inner > .item {#}*/
-        /*{#    height: 400px;#}*/
-        /*{#}#}*/
-
         /* 图片尺寸 */
         #carousel-example-generic .carousel-inner > .item > img {
             display: block;
@@ -31,6 +26,13 @@
             margin-top: 80px;
             height: 540px;
             color: #5a5a5a;
+        }
+
+        .myCenter {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
         }
 
 
@@ -138,34 +140,16 @@
         <!--讨论区帖子-->
         <div class="col-md-12">
             <div class="panel panel-default">
-                <div class="panel-heading" style="font-size:12px;">
+                <div class="panel-heading" style="font-size:15px;">
                     <div class="row">
                         <div class="col-sm-6">
-                                Choice:
-                            <select id="within" name="within">
-                                <option selected value="0">All Topics</option>
-                                <option value="1">One Day</option>
-                                <option value="2">One Week</option>
-                                <option value="3">One Month</option>
-                                <option value="4">One Year</option>
-                            </select>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Order</a>
+                            <div class="col-sm-4 col-sm-offset-4 myCenter">
+                                <span href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">帖子 <span class="glyphicon glyphicon-triangle-bottom"></span></span>
                                 <ul class="dropdown-menu">
                                     <li><a href="{{ url_for('front.discussion',sort=1) }}">最新发表</a></li>
                                     <li><a href="{{ url_for('front.discussion',sort=2) }}">评论最多</a></li>
                                 </ul>
-                            </li>
-                            {#
-                            <select id="orderby" name="orderby">
-                                <option selected value="0" href="{{ url_for('front.discussion',sort=1) }}">最新发表</option>
-                                <option value="1" href="{{ url_for('front.discussion',sort=2)}}">评论最多</option>
-                            </select>#}
-                            {#
-                            {#                            <select id="desc" name="desc">
-                            {#                                <option selected value="0">Desc</option>
-                            {#                                <option value="1">Asc</option>
-                            {#                            </select> #}
+                            </div>
                         </div>
                         <div class="col-sm-2 hidden-xs">
                             作者
@@ -251,8 +235,6 @@
     </div>
 
 
-
-    {#  place holder  #}
 
 
 {% endblock %}
