--- a/Project/templates/selfcenterbase.html
+++ b/Project/templates/selfcenterbase.html
@@ -19,45 +19,49 @@
             -moz-background-size: cover;
             /*{#-ms-background-size: cover;#}*/
         }
+
+        .myCenter {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .myTermBlock {
+            height: 50px;
+        }
+
     </style>
 
 
 {% endblock %}
 
 {% block content %}
+    {#
 
+#}
     <div class="jumbotron helloTop">
         <div class="text-center">
-            {#    这里放user name    #}
-            <h1>Hello, xxx!</h1>
-            <p>...</p>
-            <br>
-            <br>
+            <img src="{{ static(current_user.header_addr) }}" alt="..." class="img-circle">
         </div>
-        <div class="btn-group btn-group-lg text-center" role="group" aria-label="..." style="padding-top: 40px">
-            <button type="button" class="btn btn-primary"> Message <span class="badge">3</span></button>
-            <button type="button" class="btn btn-primary"> Articles</button>
-{#            <button type="button" class="btn btn-primary"> </button>#}
-        </div>
+
     </div>
 
 
-    <div class="col-sm-3" >
+    <div class="col-sm-3">
         <ul class="list-group">
-            <li class="list-group-item active">个人信息</li>
-            <li class="list-group-item active">文章管理</li>
-            <li class="list-group-item active">评论管理</li>
+            <li class="list-group-item"><a href="{{ url_for('front.selfcenter', user_id=current_user.id) }}">个人信息</a></li>
+            <li class="list-group-item"><a href="{{ url_for('front.cms_article') }}">文章管理</a></li>
+            <li class="list-group-item"><a href="{{ url_for('front.cms_comment') }}">评论管理</a></li>
             {% if current_user.admin %}
-                <li class="list-group-item"><a href="#" class="text-primary">用户管理</a></li>
-                <li class="list-group-item"><a href="#" class="text-primary">战队管理</a></li>
-                <li class="list-group-item"><a href="#" class="text-primary">选手管理</a></li>
-                <li class="list-group-item"><a href="#" class="text-primary">赛程管理</a></li>
-                <li class="list-group-item"><a href="#" class="text-primary">比赛数据管理</a></li>
+                <li class="list-group-item"><a href="{{ url_for('front.cms_user') }}" class="text-primary">用户管理</a></li>
+                <li class="list-group-item"><a href="{{ url_for('front.cms_team') }}" class="text-primary">战队管理</a></li>
+                <li class="list-group-item"><a href="{{ url_for('front.cms_game') }}" class="text-primary">赛程管理</a></li>
             {% endif %}
         </ul>
     </div><!-- /.blog-sidebar -->
 
-    <div class="row col-md-8 col-md-offset-1">
+    <div class="row col-md-8">
         {% block selfcenterbody %}
         {% endblock %}
     </div>
